기존 파일 image path 수정

--- a/flutter/_posts/2021-03-24-post01.md
+++ b/flutter/_posts/2021-03-24-post01.md
@@ -14,11 +14,11 @@ last_modified_at: 2021-03-22T
 
 ### 1. Create New Flutter Project 클릭
 
-![image-20210322230245652](http://chogyeongje.github.io/assets/images/Flutter_post1/image-20210322230245652.png)
+![image-20210322230245652](/assets/img/Flutter_post1/image-20210322230245652.png)
 
 ### 2. Flutter Application 선택  -> Next 클릭
 
-![image-20210322230347670](http://chogyeongje.github.io/assets/images/Flutter_post1/image-20210322230347670.png)
+![image-20210322230347670](/assets/img/Flutter_post1/image-20210322230347670.png)
 
 ### 3.  아래 내용 작성 후 Next 클릭
 
@@ -27,19 +27,19 @@ last_modified_at: 2021-03-22T
 + Project location : 생성 할 어플리케이션 파일의 위치
 + Description : 프로젝트에 대한 설명
 
-![image-20210322230454226](http://chogyeongje.github.io/assets/images/Flutter_post1/image-20210322230454226.png)
+![image-20210322230454226](/assets/img/Flutter_post1/image-20210322230454226.png)
 
 ### 4.  Package  name 작성 후 Finish 클릭
 
 + Package name 은 해당 Application 을 작성한 회사를 구분할 때 주로 사용됩니다. 현재는 수정하지 말고 그대로 사용하시면 됩니다.
 + Platform channel language : Android, IOS 기기에 대한 코드 작성시 Kotlin, Swift 에 대한 지원 포함 여부 
 
-![image-20210322231003546](http://chogyeongje.github.io/assets/images/Flutter_post1/image-20210322231003546.png)
+![image-20210322231003546](/assets/img/Flutter_post1/image-20210322231003546.png)
 
 ### 5.  가장 아래 Indexing 로딩 바가 사라질 때까지 대기
 
-![image-20210322231407461](http://chogyeongje.github.io/assets/images/Flutter_post1/image-20210322231407461.png)
+![image-20210322231407461](/assets/img/Flutter_post1/image-20210322231407461.png)
 
 ### 6. 완성
 
-![image-20210322231553152](http://chogyeongje.github.io/assets/images/Flutter_post1/image-20210322231553152.png)
+![image-20210322231553152](/assets/img/Flutter_post1/image-20210322231553152.png)
