--- a/flutter/_posts/2021-04-04-post09.md
+++ b/flutter/_posts/2021-04-04-post09.md
@@ -12,13 +12,15 @@ last_modified_at: 2021-04-04T
 
 ---
 
+{:toc}
+
 이번에는 배경화면에 사진을 넣어보겠습니다. 이를 위해서 먼저 assets 폴더를 만들어야 합니다. assets 이란 Flutter 에서 사진, 동영상와 같은 외부 파일을 사용할 때, 이러한 외부 파일을 모아두는 폴더를 뜻합니다.
 
 ## Assets 폴더 생성
 
 먼저 `프로젝트 폴더 우클릭 -> New -> Directory -> Name 에 'assets' 작성 ` 하여, assets 폴더를 생성해 줍니다. 여기서 '프로젝트 폴더' 란 왼쪽 Project 창에서 제일 상단에 있는 폴더를 뜻합니다.
 
-![Screenshot from 2021-04-04 14-00-59](/assets/images/Flutter_post9/Screenshot from 2021-04-04 14-00-59.png)
+![Screenshot from 2021-04-04 14-00-59](/assets/img/Flutter_post9/Screenshot from 2021-04-04 14-00-59.png)
 
 assets 폴더가 생성이 완료되었으면, assets 폴더안에 같은 방식으로 `images` 폴더를 생성해 줍니다. 이제 Flutter 에서 사용할 image 파일은 모두 `images` 폴더에 보관할 것입니다. (참고로, `assets` 폴더 외에는 꼭 특정이름을 사용할 필요는 없습니다. 필요에 따라, 편한 이름을 사용해도 됩니다.)
 
@@ -49,7 +51,7 @@ flutter:
   - assets/images/
 ```
 
-![Screenshot from 2021-04-04 14-20-15](/assets/images/Flutter_post9/Screenshot from 2021-04-04 14-20-15.png)
+![Screenshot from 2021-04-04 14-20-15](/assets/img/Flutter_post9/Screenshot from 2021-04-04 14-20-15.png)
 
 이후 우측 상단의 `Pub get` 버튼(또는 terminal 에 `flutter pub get` 입력)을 눌러줍니다. 이로서, 프로그램에서 image 파일을 인식할 수 있게 되었습니다.
 
@@ -111,7 +113,7 @@ Image 를 사용하는 방법은 여러개가 있지만, 여기서는 `Container
 
 아래는 실행 결과입니다.
 
-![Screenshot from 2021-04-04 14-51-39](/assets/images/Flutter_post9/Screenshot from 2021-04-04 14-51-39.png)
+![Screenshot from 2021-04-04 14-51-39](/assets/img/Flutter_post9/Screenshot from 2021-04-04 14-51-39.png)
 
 
 
