flutter post image 추가

--- a/flutter/_posts/2021-03-24-post01.md
+++ b/flutter/_posts/2021-03-24-post01.md
@@ -1,15 +1,7 @@
 ---
+layout: post
 title:  "Flutter Project 생성"
-categories:
-
-  - Flutter
-
-tags:
-
-  - Flutter
-
-last_modified_at: 2021-03-22T
-
+image: /assets/img/flutter_log.png
 ---
 
 ### 1. Create New Flutter Project 클릭
