--- a/flutter/_posts/2021-03-24-post02.md
+++ b/flutter/_posts/2021-03-24-post02.md
@@ -1,14 +1,8 @@
 ---
+layout: post
 title:  "Flutter Project 구조 살펴보기"
-categories:
+image: /assets/img/flutter_log.png
 
-  - Flutter
-
-tags:
-
-  - Flutter
-
-last_modified_at: 2021-03-24T
 
 ---
 
