--- a/flutter/_posts/2021-03-24-post03.md
+++ b/flutter/_posts/2021-03-24-post03.md
@@ -1,14 +1,7 @@
 ---
+layout: post
 title:  "Flutter 샘플 프로젝트 살펴보기"
-categories:
-
-  - Flutter
-
-tags:
-
-  - Flutter
-
-last_modified_at: 2021-03-24T
+image: /assets/img/flutter_log.png
 
 ---
 
