--- a/flutter/_posts/2021-03-29-post06.md
+++ b/flutter/_posts/2021-03-29-post06.md
@@ -1,12 +1,7 @@
 ---
+layout: post
 title:  "Flutter 사용해보기"
-categories:
-
-  - Flutter
-
-tags:
-
-  - Flutter
+image: /assets/img/flutter_log.png
 
 ---
 
