--- a/flutter/_posts/2021-04-04-post09.md
+++ b/flutter/_posts/2021-04-04-post09.md
@@ -1,13 +1,7 @@
 ---
+layout: post
 title:  "Flutter 이미지 사용하기"
-categories:
-
-  - Flutter
-
-tags:
-
-  - Flutter
-
+image: /assets/img/flutter_log.png
 last_modified_at: 2021-04-04T
 
 ---
