--- a/flutter/_posts/2021-03-24-post04.md
+++ b/flutter/_posts/2021-03-24-post04.md
@@ -1,14 +1,7 @@
 ---
+layout: post
 title:  "Flutter Project Chrome 창에서 실행시키기"
-categories:
-
-  - Flutter
-
-tags:
-
-  - Flutter
-
-last_modified_at: 2021-03-24T
+image: /assets/img/flutter_log.png
 
 ---
 
