--- a/flutter/_posts/2021-03-29-post05.md
+++ b/flutter/_posts/2021-03-29-post05.md
@@ -1,13 +1,7 @@
 ---
+layout: post
 title:  "Flutter 기본 용어 및 Tip"
-categories:
-
-  - Flutter
-
-tags:
-
-  - Flutter
-
+image: /assets/img/flutter_log.png
 
 ---
 
