--- a/flutter/_posts/2021-03-31-post07.md
+++ b/flutter/_posts/2021-03-31-post07.md
@@ -1,14 +1,7 @@
 ---
+layout: post
 title:  "Flutter Widget 배치"
-categories:
-
-  - Flutter
-
-tags:
-
-  - Flutter
-
-
+image: /assets/img/flutter_log.png
 ---
 
 
