--- a/flutter/_posts/2021-03-31-post08.md
+++ b/flutter/_posts/2021-03-31-post08.md
@@ -1,13 +1,7 @@
 ---
+layout: post
 title:  "Flutter 뭐든 따라해보기"
-categories:
-
-  - Flutter
-
-tags:
-
-  - Flutter
-
+image: /assets/img/flutter_log.png
 
 ---
 
