--- a/flutter/_posts/2021-03-24-post03.md
+++ b/flutter/_posts/2021-03-24-post03.md
@@ -1,9 +1,15 @@
 ---
 layout: post
 title:  "Flutter 샘플 프로젝트 살펴보기"
-image: /assets/img/flutter_log.png
+image: /assets/img/flutter_logo.png
 
 ---
+
+* toc
+{:toc}
+
+
+
 
 이번에는 lib 폴더 안에 있는 main.dart 를 통해 샘플 프로젝트를 살펴볼 것입니다.
 
