--- a/flutter/_posts/2021-03-29-post05.md
+++ b/flutter/_posts/2021-03-29-post05.md
@@ -1,9 +1,15 @@
 ---
 layout: post
 title:  "Flutter 기본 용어 및 Tip"
-image: /assets/img/flutter_log.png
+image: /assets/img/flutter_logo.png
 
 ---
+
+* toc
+{:toc}
+
+
+
 
 본격적으로 Flutter 를 사용하기에 앞서 Flutter 에서 사용하는 용어와 몇가지 Tip 을 알려드리려고 합니다.
 
