--- a/flutter/_posts/2021-03-31-post07.md
+++ b/flutter/_posts/2021-03-31-post07.md
@@ -1,8 +1,13 @@
 ---
 layout: post
 title:  "Flutter Widget 배치"
-image: /assets/img/flutter_log.png
+image: /assets/img/flutter_logo.png
 ---
+
+* toc
+{:toc}
+
+
 
 
 이번에는 Flutter 에서 Widget 을 배치하는 방법에 대해서 알아볼 것입니다. 
