--- a/flutter/_posts/2021-03-31-post08.md
+++ b/flutter/_posts/2021-03-31-post08.md
@@ -1,9 +1,13 @@
 ---
 layout: post
 title:  "Flutter 뭐든 따라해보기"
-image: /assets/img/flutter_log.png
+image: /assets/img/flutter_logo.png
 
 ---
+
+* toc
+{:toc}
+
 
 이제는 Flutter 를 활용하여 기존에 상용화된 다른 Application 을 한번 따라 만들어 볼 것입니다.
 
