--- a/flutter/_posts/2021-04-04-post10.md
+++ b/flutter/_posts/2021-04-04-post10.md
@@ -1,12 +1,14 @@
 ---
 layout: post
 title:  "Flutter 시계 기능 작성"
-image: /assets/img/flutter_log.png
+image: /assets/img/flutter_logo.png
 last_modified_at: 2021-04-04T
 
 ---
 
+* toc
 {:toc}
+
 
 
 
