--- a/flutter/_posts/2021-04-23-post11.md
+++ b/flutter/_posts/2021-04-23-post11.md
@@ -1,14 +1,12 @@
 ---
 layout: post
 title:  Flutter OpenCV 사용하기
-image: /assets/img/flutter_log.png
-description: >
-  description example
+image: /assets/img/flutter_logo.jpg
 sitemap: false
 ---
 
+* toc
 {:toc}
-
 
 
 ## 1. RealTime 카메라 환경 구축
