--- a/flutter/_posts/2021-03-24-post02.md
+++ b/flutter/_posts/2021-03-24-post02.md
@@ -1,10 +1,16 @@
 ---
 layout: post
 title:  "Flutter Project 구조 살펴보기"
-image: /assets/img/flutter_log.png
+image: /assets/img/flutter_logo.png
 
 
 ---
+
+* toc
+{:toc}
+
+
+
 
 안드로이드 스튜디오를 사용하여 Flutter Project 를 열면 다음과 같은 화면을 확인할 수 있습니다.
 
