--- a/flutter/_posts/2021-03-24-post04.md
+++ b/flutter/_posts/2021-03-24-post04.md
@@ -1,9 +1,15 @@
 ---
 layout: post
 title:  "Flutter Project Chrome 창에서 실행시키기"
-image: /assets/img/flutter_log.png
+image: /assets/img/flutter_logo.png
 
 ---
+
+* toc
+{:toc}
+
+
+
 
 가장 먼저 Chrome 을 설치하셔야 됩니다. 아래 링크로 들어가셔서 Google Chrome 을 설치해주시기 바랍니다.
 
