--- a/flutter/_posts/2021-03-29-post06.md
+++ b/flutter/_posts/2021-03-29-post06.md
@@ -1,9 +1,14 @@
 ---
 layout: post
 title:  "Flutter 사용해보기"
-image: /assets/img/flutter_log.png
+image: /assets/img/flutter_logo.png
 
 ---
+
+* toc
+{:toc}
+
+
 
 
 이번에는 Flutter 기본 기능을 간단히 사용해보고자 합니다. 먼저 모든 샘플 프로젝트의 모든 내용을 지운 후 아래 코드를 작성해 줍니다.
