--- a/flutter/_posts/2021-04-04-post09.md
+++ b/flutter/_posts/2021-04-04-post09.md
@@ -1,12 +1,16 @@
 ---
 layout: post
 title:  "Flutter 이미지 사용하기"
-image: /assets/img/flutter_log.png
+image: /assets/img/flutter_logo.png
 last_modified_at: 2021-04-04T
 
 ---
 
+* toc
 {:toc}
+
+
+
 
 이번에는 배경화면에 사진을 넣어보겠습니다. 이를 위해서 먼저 assets 폴더를 만들어야 합니다. assets 이란 Flutter 에서 사진, 동영상와 같은 외부 파일을 사용할 때, 이러한 외부 파일을 모아두는 폴더를 뜻합니다.
 
