디자인 변경

--- a/_posts/devlog/flutter/2021-03-24-post02.md
+++ b/_posts/devlog/flutter/2021-03-24-post02.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title:  "Flutter Project 구조 살펴보기"
+title:  "[Flutter] Project 구조 살펴보기"
 image: /assets/img/flutter_logo.png
-
-
+category: devlog
+tags: flutter
 ---
 
 * toc
