--- a/_posts/devlog/flutter/2021-03-24-post03.md
+++ b/_posts/devlog/flutter/2021-03-24-post03.md
@@ -1,8 +1,9 @@
 ---
 layout: post
-title:  "Flutter 샘플 프로젝트 살펴보기"
+title:  "[Flutter] 샘플 프로젝트 살펴보기"
 image: /assets/img/flutter_logo.png
-
+category: devlog
+tags: flutter
 ---
 
 * toc
