--- a/_posts/devlog/flutter/2021-03-24-post04.md
+++ b/_posts/devlog/flutter/2021-03-24-post04.md
@@ -1,8 +1,9 @@
 ---
 layout: post
-title:  "Flutter Project Chrome 창에서 실행시키기"
+title:  "[Flutter] Project Chrome 창에서 실행시키기"
 image: /assets/img/flutter_logo.png
-
+category: devlog
+tags: flutter
 ---
 
 * toc
