--- a/_posts/devlog/flutter/2021-03-29-post05.md
+++ b/_posts/devlog/flutter/2021-03-29-post05.md
@@ -1,8 +1,9 @@
 ---
 layout: post
-title:  "Flutter 기본 용어 및 Tip"
+title:  "[Flutter] 기본 용어 및 Tip"
 image: /assets/img/flutter_logo.png
-
+category: devlog
+tags: flutter
 ---
 
 * toc
