--- a/_posts/devlog/flutter/2021-03-29-post06.md
+++ b/_posts/devlog/flutter/2021-03-29-post06.md
@@ -1,8 +1,9 @@
 ---
 layout: post
-title:  "Flutter 사용해보기"
+title:  "[Flutter] 사용해보기"
 image: /assets/img/flutter_logo.png
-
+category: devlog
+tags: flutter
 ---
 
 * toc
