--- a/_posts/devlog/flutter/2021-03-31-post07.md
+++ b/_posts/devlog/flutter/2021-03-31-post07.md
@@ -1,7 +1,9 @@
 ---
 layout: post
-title:  "Flutter Widget 배치"
+title:  "[Flutter] Widget 배치"
 image: /assets/img/flutter_logo.png
+category: devlog
+tags: flutter
 ---
 
 * toc
