--- a/_posts/devlog/flutter/2021-04-04-post10.md
+++ b/_posts/devlog/flutter/2021-04-04-post10.md
@@ -1,9 +1,10 @@
 ---
 layout: post
-title:  "Flutter 시계 기능 작성"
+title:  "[Flutter] 시계 기능 작성"
 image: /assets/img/flutter_logo.png
 last_modified_at: 2021-04-04T
-
+category: devlog
+tags: flutter
 ---
 
 * toc
