--- a/_posts/devlog/flutter/2021-04-23-post11.md
+++ b/_posts/devlog/flutter/2021-04-23-post11.md
@@ -1,8 +1,10 @@
 ---
 layout: post
-title:  Flutter OpenCV 사용하기
+title:  "[Flutter] OpenCV 사용하기"
 image: /assets/img/flutter_logo.jpg
 sitemap: false
+category: devlog
+tags: flutter
 ---
 
 * toc
