--- a/_posts/devlog/hololens2/2021-12-25-03_extra.md
+++ b/_posts/devlog/hololens2/2021-12-25-03_extra.md
@@ -2,6 +2,8 @@
 layout: post
 title: "[HoloLens2] 추가 기능 사용"
 image: /assets/img/hololens2_logo.jpeg
+category: devlog
+tags: hololens2
 ---
 
 * toc
