--- a/_posts/devlog/flutter/2021-03-24-post01.md
+++ b/_posts/devlog/flutter/2021-03-24-post01.md
@@ -1,7 +1,9 @@
 ---
 layout: post
-title:  "Flutter Project 생성"
+title:  "[Flutter] Project 생성"
 image: /assets/img/flutter_logo.png
+category: devlog
+tags: flutter
 ---
 
 * toc
