--- a/_posts/devlog/flutter/2021-03-31-post08.md
+++ b/_posts/devlog/flutter/2021-03-31-post08.md
@@ -1,8 +1,9 @@
 ---
 layout: post
-title:  "Flutter 뭐든 따라해보기"
+title:  "[Flutter] 뭐든 따라해보기"
 image: /assets/img/flutter_logo.png
-
+category: devlog
+tags: flutter
 ---
 
 * toc
