--- a/_posts/devlog/flutter/2021-04-04-post09.md
+++ b/_posts/devlog/flutter/2021-04-04-post09.md
@@ -1,9 +1,10 @@
 ---
 layout: post
-title:  "Flutter 이미지 사용하기"
+title:  "[Flutter] 이미지 사용하기"
 image: /assets/img/flutter_logo.png
 last_modified_at: 2021-04-04T
-
+category: devlog
+tags: flutter
 ---
 
 * toc
